Config-Data Model

--- a/EXP4/AR_model.ipynb
+++ b/EXP4/AR_model.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "import Config_Data as CD"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-11T14:54:06.142932Z",
+     "start_time": "2024-08-11T14:54:03.641612Z"
+    }
+   },
+   "id": "bdb4f9faafd8f832",
+   "execution_count": 2
+  },
+  {
+   "cell_type": "code",
    "outputs": [
     {
      "data": {
