--- a/EXP4/AR_model.ipynb
+++ b/EXP4/AR_model.ipynb
@@ -47,9 +47,10 @@
       "    num_heads: 8\n",
       "    num_gat_layers: 3\n",
       "gnn_config: GNNConfig(hidden_size=32, num_layers=3)\n",
-      "-----------------Train and Valid Info-----------------\n",
+      "-----------------Train and Valid Data Info-----------------\n",
       "load_iid.shape: (10, 11000)\n",
       "load_ar1.shape: (10, 11000)\n",
+      "data_type: ar1\n",
       "data_np.shape: (10, 11000)\n",
       "data_tensor.shape: torch.Size([10, 11000])\n",
       "T: 11000\n",
@@ -58,12 +59,16 @@
       "train_ratio: 0.8\n",
       "T_train_val: 10000\n",
       "T_test: 1000\n",
+      "train_val_data_np.shape: (10, 10000)\n",
       "train_data_np.shape: (10, 8000)\n",
       "val_data_np.shape: (10, 2000)\n",
       "test_data_np.shape: (10, 1000)\n",
+      "train_val_data_tensor.shape: torch.Size([10, 10000])\n",
       "train_data_tensor.shape: torch.Size([10, 8000])\n",
       "val_data_tensor.shape: torch.Size([10, 2000])\n",
       "test_data_tensor.shape: torch.Size([10, 1000])\n",
+      "train_val_x.shape: torch.Size([9980, 20, 10])\n",
+      "train_val_y.shape: torch.Size([9980, 10])\n",
       "train_x.shape: torch.Size([7980, 20, 10])\n",
       "train_y.shape: torch.Size([7980, 10])\n",
       "val_x.shape: torch.Size([1980, 20, 10])\n",
@@ -77,7 +82,15 @@
       "Train i: 124, x: torch.Size([44, 20, 10]), y: torch.Size([44, 10])\n",
       "-------------Valid Dataloader Info-------------\n",
       "Valid i:   0, x: torch.Size([64, 20, 10]), y: torch.Size([64, 10])\n",
-      "Valid i:  30, x: torch.Size([60, 20, 10]), y: torch.Size([60, 10])\n"
+      "Valid i:  30, x: torch.Size([60, 20, 10]), y: torch.Size([60, 10])\n",
+      "-------------Train and Valid Dataloader Info-------------\n",
+      "Train and Valid i:   0, x: torch.Size([64, 20, 10]), y: torch.Size([64, 10])\n",
+      "Train and Valid i:  30, x: torch.Size([64, 20, 10]), y: torch.Size([64, 10])\n",
+      "Train and Valid i:  60, x: torch.Size([64, 20, 10]), y: torch.Size([64, 10])\n",
+      "Train and Valid i:  90, x: torch.Size([64, 20, 10]), y: torch.Size([64, 10])\n",
+      "Train and Valid i: 120, x: torch.Size([64, 20, 10]), y: torch.Size([64, 10])\n",
+      "Train and Valid i: 150, x: torch.Size([64, 20, 10]), y: torch.Size([64, 10])\n",
+      "Train and Valid i: 155, x: torch.Size([60, 20, 10]), y: torch.Size([60, 10])\n"
      ]
     },
     {
@@ -134,8 +147,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-13T05:41:45.367006Z",
-     "start_time": "2024-08-13T05:41:29.171331Z"
+     "end_time": "2024-08-15T07:17:29.328639Z",
+     "start_time": "2024-08-15T07:17:04.783140Z"
     }
    },
    "id": "97fb47954d413068",
@@ -160,8 +173,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-13T05:41:45.372368Z",
-     "start_time": "2024-08-13T05:41:45.368009Z"
+     "end_time": "2024-08-15T07:17:29.333193Z",
+     "start_time": "2024-08-15T07:17:29.329648Z"
     }
    },
    "id": "ae53b8f582c715b7",
@@ -178,8 +191,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-13T05:41:45.778465Z",
-     "start_time": "2024-08-13T05:41:45.373377Z"
+     "end_time": "2024-08-15T07:17:30.423090Z",
+     "start_time": "2024-08-15T07:17:29.333193Z"
     }
    },
    "id": "5a489f89d96d5c52",
@@ -227,8 +240,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-13T05:41:45.782162Z",
-     "start_time": "2024-08-13T05:41:45.778465Z"
+     "end_time": "2024-08-15T07:17:31.144636Z",
+     "start_time": "2024-08-15T07:17:31.141132Z"
     }
    },
    "id": "5f77a52adc79b169",
@@ -353,12 +366,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-13T05:42:44.714290Z",
-     "start_time": "2024-08-13T05:42:44.704926Z"
+     "end_time": "2024-08-15T07:17:31.915592Z",
+     "start_time": "2024-08-15T07:17:31.842557Z"
     }
    },
    "id": "d8adde54ec1b1cdd",
-   "execution_count": 7
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -1367,15 +1380,15 @@
       "t=997, joint_train_data.shape=(10, 11000)\n",
       "t=998, joint_train_data.shape=(10, 11000)\n",
       "t=999, joint_train_data.shape=(10, 11000)\n",
-      "CPU times: total: 8.48 s\n",
-      "Wall time: 27.7 s\n"
+      "CPU times: total: 10.6 s\n",
+      "Wall time: 25.1 s\n"
      ]
     },
     {
      "data": {
       "text/plain": "1019.3310106880552"
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1390,12 +1403,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-13T05:43:13.048005Z",
-     "start_time": "2024-08-13T05:42:45.347521Z"
+     "end_time": "2024-08-15T07:17:57.692182Z",
+     "start_time": "2024-08-15T07:17:32.561821Z"
     }
    },
    "id": "faa992543c5f247e",
-   "execution_count": 8
+   "execution_count": 6
   },
   {
    "cell_type": "code",
@@ -1404,7 +1417,7 @@
      "data": {
       "text/plain": "(10, 1000)"
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1415,12 +1428,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-13T05:43:15.151464Z",
-     "start_time": "2024-08-13T05:43:15.147989Z"
+     "end_time": "2024-08-15T07:17:57.698168Z",
+     "start_time": "2024-08-15T07:17:57.693188Z"
     }
    },
    "id": "f922192ce6f93c92",
-   "execution_count": 9
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -1441,12 +1454,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-13T05:43:15.674843Z",
-     "start_time": "2024-08-13T05:43:15.589698Z"
+     "end_time": "2024-08-15T07:17:57.819544Z",
+     "start_time": "2024-08-15T07:17:57.699085Z"
     }
    },
    "id": "d0a4c992bf522620",
-   "execution_count": 10
+   "execution_count": 8
   },
   {
    "cell_type": "code",
@@ -1467,12 +1480,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-13T05:43:16.510087Z",
-     "start_time": "2024-08-13T05:43:16.406894Z"
+     "end_time": "2024-08-15T07:17:57.944317Z",
+     "start_time": "2024-08-15T07:17:57.822060Z"
     }
    },
    "id": "499c40128ad54480",
-   "execution_count": 11
+   "execution_count": 9
   },
   {
    "cell_type": "code",
@@ -1492,12 +1505,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-13T05:43:17.104436Z",
-     "start_time": "2024-08-13T05:43:17.023300Z"
+     "end_time": "2024-08-15T07:17:58.034532Z",
+     "start_time": "2024-08-15T07:17:57.945848Z"
     }
    },
    "id": "e74a18e2ef5f0632",
-   "execution_count": 12
+   "execution_count": 10
   },
   {
    "cell_type": "code",
@@ -1517,12 +1530,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-13T05:43:17.801913Z",
-     "start_time": "2024-08-13T05:43:17.719805Z"
+     "end_time": "2024-08-15T07:17:58.117380Z",
+     "start_time": "2024-08-15T07:17:58.034532Z"
     }
    },
    "id": "b49eb8156043083c",
-   "execution_count": 13
+   "execution_count": 11
   },
   {
    "cell_type": "code",
@@ -1542,12 +1555,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-13T05:43:18.368770Z",
-     "start_time": "2024-08-13T05:43:18.288346Z"
+     "end_time": "2024-08-15T07:17:58.191863Z",
+     "start_time": "2024-08-15T07:17:58.118387Z"
     }
    },
    "id": "8102dced4b21d29a",
-   "execution_count": 14
+   "execution_count": 12
   },
   {
    "cell_type": "code",
@@ -1567,12 +1580,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-13T05:43:19.020711Z",
-     "start_time": "2024-08-13T05:43:18.929304Z"
+     "end_time": "2024-08-15T07:17:58.283579Z",
+     "start_time": "2024-08-15T07:17:58.192868Z"
     }
    },
    "id": "218b530ed4caea0e",
-   "execution_count": 15
+   "execution_count": 13
   },
   {
    "cell_type": "code",
